--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
