--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.1",
     "normalize.css": "^7.0.0",
+    "png2svg": "^0.0.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
