--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
-  "presets": ["env"],
-  //对象展开运算符
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [
+    "env",
+    "react"
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
