--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --config webpack.dev.js"
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "mock": "dora.cmd --plugins proxy"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,8 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "dora": "^0.5.0",
+    "dora-plugin-proxy": "^0.8.5",
     "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.5.0",
@@ -35,9 +38,12 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
