--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,18 @@
 {
   "presets": [
     "env",
-    "react"
+    "react",
+    "es2015",
+    "stage-0"
   ],
   "plugins": [
+    [
+      "transform-runtime",
+      {
+        "polyfill": false,
+        "regenerator": true
+      }
+    ],
     "transform-object-rest-spread"
   ]
 }
