--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.7",
     "dora": "^0.5.0",
     "dora-plugin-proxy": "^0.8.5",
@@ -54,6 +55,7 @@
     "redux-thunk": "",
     "uglifyjs-webpack-plugin": "^1.1.0",
     "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "react-masonry-layout": "latest"
   }
 }
