--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-hot-loader": "^3.1.3",
+    "react-masonry-layout": "latest",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -55,7 +57,6 @@
     "redux-thunk": "",
     "uglifyjs-webpack-plugin": "^1.1.0",
     "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1",
-    "react-masonry-layout": "latest"
+    "webpack-merge": "^4.1.1"
   }
 }
