--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
     "indent": 0,
     "linebreak-style": [
       "error",
-      "windows"
+//      "windows"
+      "unix"
     ],
     "quotes": [
       "error",
