登录页面与逻辑

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,8 @@
     "indent": 0,
     "linebreak-style": [
       "error",
-//      "windows"
-      "unix"
+      "windows"
+//      "unix"
     ],
     "quotes": [
       "error",
