--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
+    "clipboard": "^1.7.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "jquery": "^3.2.1",
